--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "chalk": "^4.1.2",
     "figlet": "^1.5.2",
-    "inquirer": "^8.1.5"
+    "inquirer": "^8.1.5",
+    "markdown-it": "^12.2.0"
   },
   "bin": "index.js"
 }
