--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "md-links",
   "version": "0.1.0",
   "dependencies": {
+    "axios": "^0.22.0",
     "chalk": "^4.1.2",
     "figlet": "^1.5.2",
     "inquirer": "^8.1.5",
