--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "figlet": "^1.5.2",
     "inquirer": "^8.1.5",
     "markdown-it": "^12.2.0",
-    "minimist": "^1.2.5"
+    "minimist": "^1.2.5",
+    "ora": "^6.0.1"
   },
   "bin": "index.js"
 }
