--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "axios": "^0.22.0",
     "chalk": "^4.1.2",
+    "cli-progress": "^3.9.1",
     "figlet": "^1.5.2",
     "inquirer": "^8.1.5",
     "markdown-it": "^12.2.0",
