--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "dependencies": {
     "axios": "^0.22.0",
     "chalk": "^4.1.2",
-    "cli-progress": "^3.9.1",
     "figlet": "^1.5.2",
-    "inquirer": "^8.1.5",
-    "markdown-it": "^12.2.0",
-    "minimist": "^1.2.5",
-    "ora": "^6.0.1"
+    "minimist": "^1.2.5"
   },
-  "bin": "index.js"
+  "bin": "index.js",
+  "devDependencies": {
+    "jest": "^27.3.1"
+  },
+
+  "scripts": {
+    "test": "jest --coverage --watch"
+  }
 }
