--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   },
   "bin": "index.js",
   "devDependencies": {
+    "eslint": "^8.1.0",
     "jest": "^27.3.1"
   },
-
   "scripts": {
     "test": "jest --coverage --watch"
   }
